<resources>
    <string name="app_name">Kekod-1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_cloudy">Cloudy</string>
    <string name="weather_cloudy_temp">36°</string>
    <string name="weather_cloudy_wind">40 km</string>
    <string name="weather_cloudy_humidty">10 %</string>
    <string name="weather_cloudy_1day">25 Aug</string>
    <string name="weather_cloudy_1day_temp">30°</string>
    <string name="weather_cloudy_2day">26 Aug</string>
    <string name="weather_cloudy_2day_temp">12°</string>
    <string name="weather_cloudy_3day">27 Aug</string>
    <string name="weather_cloudy_3day_temp">39°</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_sunny_temp">36°</string>
    <string name="weather_sunny_wind">23 km</string>
    <string name="weather_sunny_humidity">54 %</string>
    <string name="weather_sunny_1day">25 Aug</string>
    <string name="weather_sunny_1day_temp">30°</string>
    <string name="weather_sunny_2day">26 Aug</string>
    <string name="weather_sunny_2day_temp">12°</string>
    <string name="weather_sunny_3day">27 Aug</string>
    <string name="weather_sunny_3day_temp">39°</string>
    <string name="weather_thunder">Thunder</string>
    <string name="weather_thunder_temp">9°</string>
    <string name="weather_thunder_wind">78 km</string>
    <string name="weather_thunder_humadity">6 %</string>
    <string name="weather_thunder_1day">25 Aug</string>
    <string name="weather_thunder_1day_temp">21°</string>
    <string name="weather_thunder_2day">26 Aug</string>
    <string name="weather_thunder_2day_temp">12°</string>
    <string name="weather_thunder_3day">27 Aug</string>
    <string name="weather_thunder_3day_temp">39°</string>
</resources>